<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="service_name">Media Player Service</string>

    <string name="local_music">Local</string>
    <string name="online_music">Online</string>
    <string name="recent_music">Recent</string>
    <string name="favourite_music">Favourite</string>
    <string name="playlists">Playlists</string>
    <string name="pop_up_menu_play">Play</string>
    <string name="pop_up_menu_add_to_playlist">Add to playlist</string>
    <string name="pop_up_menu_remove_recent">Remove from Recent</string>
    <string name="pop_up_menu_add_remove_favourite">Add to/Remove from Favourite</string>
    <string name="pop_up_menu_create_playlist">Create playlist</string>
    <string name="pop_up_menu_remove_playlist">Remove playlist</string>
    <string name="pop_up_menu_remove_from_current_playlist">Remove from current playlist</string>
    <string name="custom_playlist_name">Enter the playlist name</string>
    <string name="add_custom_playlist">Add playlist</string>
    <string name="undo">Undo</string>
    <string name="playlist_name">Playlist name</string>
    <string name="enable_night_mode">Enable night mode</string>
    <string name="select_service">Select media service for media:</string>

</resources>