<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutAddCustomPlaylist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/cardview_dark_background">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bUndoCreateCustomPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/undo"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSelectedPlaylistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_middle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bAddCustomPlaylist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/add_custom_playlist"
            android:textSize="@dimen/text_size_middle"
            android:padding="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCustomPlaylistName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:placeholderText="@string/playlist_name"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/bCreateCustomPlaylist"
            app:layout_constraintStart_toEndOf="@+id/bUndoCreateCustomPlaylist"
            tools:layout_editor_absoluteY="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCustomPlaylistName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/bCreateCustomPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:visibility="gone"
            android:padding="@dimen/padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAlbums"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutAddCustomPlaylist"
        app:layout_constraintVertical_bias="1.0"
        tools:itemCount="12"
        tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:layout_editor_absoluteX="-66dp"
        tools:listitem="@layout/item_audio"
        tools:orientation="vertical"
        tools:spanCount="3" />
</androidx.constraintlayout.widget.ConstraintLayout>